@@ -9,6 +9,7 @@ base-installer (1.18) UNRELEASED; urgency=low
       installation is complete. This allows locales to be created earlier,
       thereby silencing warnings from code that chroots into /target before
       prebaseconfig runs.
+    - Use C-style comments in run-debootstrap.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 18:44:17 +0100
 
